Creación de la estructura de la sección 'Educación'

--- a/index.html
+++ b/index.html
@@ -41,43 +41,56 @@
         </div>
 
         <!-- Quien soy -->
-        <div class="content__perfil" id="perfil">
-            <div class="perfil__image">
-                <img class="perfil__image-image" src="../../Elementos/imagenes/principal_perfil.JPEG" alt="imagen perfil graduación">
-            </div>
-            <div class="perfil__description">
-                <p class="perfil__description-text">
-                    Profesional altamente comprometido con la gestión, diseño, desarrollo y mejora de software, tanto en ámbitos 
-                    investigativos como informativos. Apasionado por el desarrollo de interfaces de usuario web (front-end), con 
-                    conocimientos en frameworks y lenguajes de programación. Competente en lógicas de programación, creando 
-                    soluciones eficientes y escalables en desarrollos back-end y aplicaciones de escritorio. Poseo sólidos 
-                    conocimientos en bases de datos, especialmente Oracle SQL y MySQL, con experiencia destacada en el proyecto 
-                    Asofondos con Heinsohn Business Technology, gestionando las bases de datos de pensiones en Colombia. 
-                    Cuento con fuertes habilidades en toma de decisiones, trabajo en equipo, responsabilidad y sentido de pertenencia.
-                </p>
+        <div class="main__content">
+            <h1 class="main__content-title">Perfil</h1>
+            <div class="content__perfil" id="perfil">
+                <div class="perfil__image">
+                    <img class="perfil__image-image" src="../../Elementos/imagenes/principal_perfil.JPEG" alt="imagen perfil graduación">
+                </div>
+                <div class="perfil__description">
+                    <p class="perfil__description-text">
+                        Profesional altamente comprometido con la gestión, diseño, desarrollo y mejora de software, tanto en ámbitos 
+                        investigativos como informativos. Apasionado por el desarrollo de interfaces de usuario web (front-end), con 
+                        conocimientos en frameworks y lenguajes de programación. Competente en lógicas de programación, creando 
+                        soluciones eficientes y escalables en desarrollos back-end y aplicaciones de escritorio. Poseo sólidos 
+                        conocimientos en bases de datos, especialmente Oracle SQL y MySQL, con experiencia destacada en el proyecto 
+                        Asofondos con Heinsohn Business Technology, gestionando las bases de datos de pensiones en Colombia. 
+                        Cuento con fuertes habilidades en toma de decisiones, trabajo en equipo, responsabilidad y sentido de pertenencia.
+                    </p>
+                </div>
             </div>
         </div>
 
         <!-- Educación -->
-         <div class="content__education" id="education">
+         <div class="main__education" id="education">
+            <h1 class="main__education-title">Educación</h1>
             <div class="education__titles">
                 <div class="education__title education__title--primary">
-                    <img class="education__title-image" src="" alt="">
-                    <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
-                    <h3 class="education__title-title"></h3>
-                    <p class="education__title-text"></p>
+                    <img class="education__title-image" src="./Elementos/imagenes/primaria.jpg" alt="salon de primaria">
+                    <div class="title__info">
+                        <img class="education__title-image" src="" alt="">
+                        <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
+                        <h3 class="education__title-title"></h3>
+                        <p class="education__title-text"></p>
+                    </div>
                 </div>
-                <div class="education__title education__title--secundary">
-                    <img class="education__title-image" src="" alt="">
-                    <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
-                    <h3 class="education__title-title"></h3>
-                    <p class="education__title-text"></p>
+                <div class="education__title education__title--primary">
+                    <img class="education__title-image" src="./Elementos/imagenes/secundaria.jpg" alt="salon de primaria">
+                    <div class="title__info">
+                        <img class="education__title-image" src="" alt="">
+                        <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
+                        <h3 class="education__title-title"></h3>
+                        <p class="education__title-text"></p>
+                    </div>
                 </div>
-                <div class="education__title education__title--professional">
-                    <img class="education__title-image" src="" alt="">
-                    <!-- <a href="https://www.flaticon.es/iconos-gratis/titulo-universitario" title="titulo universitario iconos">Titulo universitario iconos creados por winnievinzence - Flaticon</a> -->
-                    <h3 class="education__title-title"></h3>
-                    <p class="education__title-text"></p>
+                <div class="education__title education__title--primary">
+                    <img class="education__title-image" src="./Elementos/imagenes/superior.jpg" alt="salon de primaria">
+                    <div class="title__info">
+                        <img class="education__title-image" src="" alt="">
+                        <!-- <a href="https://www.flaticon.es/iconos-gratis/titulo-universitario" title="titulo universitario iconos">Titulo universitario iconos creados por winnievinzence - Flaticon</a> -->
+                        <h3 class="education__title-title"></h3>
+                        <p class="education__title-text"></p>
+                    </div>
                 </div>
             </div>
             <div class="education__certifications">
