Estilos e imagenes actualizadas para la educación y se inicia la estructura para las certificaciones

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#perfil"><button data-target="perfil" class="header__nav-button">Perfil</button></a>
                 </li>
                 <li class="header__nav-item">
-                    <button data-target="education" class="header__nav-button">Educación</button>
+                    <a href="#education"><button data-target="education" class="header__nav-button">Educación</button></a>
                 </li>
                 <li class="header__nav-item">
                     <button data-target="experience" class="header__nav-button">Experiencia</button>
@@ -68,36 +68,40 @@
                 <div class="education__title education__title--primary">
                     <img class="education__title-image" src="./Elementos/imagenes/primaria.jpg" alt="salon de primaria">
                     <div class="title__info">
-                        <img class="education__title-image" src="" alt="">
-                        <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
-                        <h3 class="education__title-title"></h3>
-                        <p class="education__title-text"></p>
+                        <h2 class="education__title-title">Educación Primaria</h2>
+                        <h3 class="education__title-institution">Escuela San Camilo</h3>
+                        <p class="education__title-text">2004-2008</p>
                     </div>
                 </div>
                 <div class="education__title education__title--primary">
                     <img class="education__title-image" src="./Elementos/imagenes/secundaria.jpg" alt="salon de primaria">
                     <div class="title__info">
-                        <img class="education__title-image" src="" alt="">
-                        <!-- <a href="https://www.flaticon.es/iconos-gratis/adolescente" title="adolescente iconos">Adolescente iconos creados por Freepik - Flaticon</a> -->
-                        <h3 class="education__title-title"></h3>
-                        <p class="education__title-text"></p>
+                        <h2 class="education__title-title">Educación secundaria</h2>
+                        <h3 class="education__title-institution">Franciso Antonio de Ulloa</h3>
+                        <p class="education__title-text">2009-2014</p>
                     </div>
                 </div>
                 <div class="education__title education__title--primary">
                     <img class="education__title-image" src="./Elementos/imagenes/superior.jpg" alt="salon de primaria">
                     <div class="title__info">
-                        <img class="education__title-image" src="" alt="">
-                        <!-- <a href="https://www.flaticon.es/iconos-gratis/titulo-universitario" title="titulo universitario iconos">Titulo universitario iconos creados por winnievinzence - Flaticon</a> -->
-                        <h3 class="education__title-title"></h3>
-                        <p class="education__title-text"></p>
+                        <h2 class="education__title-title">Educación superior</h2>
+                        <h3 class="education__title-institution">Universidad del Cauca</h3>
+                        <p class="education__title-text">2015-2023</p>
                     </div>
                 </div>
             </div>
-            <div class="education__certifications">
-
+            <div class="education__certification">
+                <h2 class="education__certification-title subtitle">Certificaciones</h2>
+                <div class="education__certifications">
+                    <div class="education__item">
+                        <img class="education__item-logo" src="" alt="logo de la plataforma o evento">
+                        <h2 class="education__item-title">Titulo del curso</h2>
+                        <h3 class="education__item-certifier">Plataforma o evento</h3>
+                    </div>
+                </div>
             </div>
             <div class="education__knowledge">
-
+                <!-- logos de la tecnologia -->
             </div>
          </div>
         <!-- Experiencia -->
