Creación display grid para los certificados

--- a/index.html
+++ b/index.html
@@ -94,13 +94,34 @@
                 <h2 class="education__certification-title subtitle">Certificaciones</h2>
                 <div class="education__certifications">
                     <div class="education__item">
-                        <img class="education__item-logo" src="" alt="logo de la plataforma o evento">
+                        <h3 class="education__item-certifier">Nombre de origen</h3>
                         <h2 class="education__item-title">Titulo del curso</h2>
-                        <h3 class="education__item-certifier">Plataforma o evento</h3>
+                        <p class="education__item-place">Plataforma o evento</p>
+                    </div>
+                    <div class="education__item">
+                        <h3 class="education__item-certifier">Nombre de origen</h3>
+                        <h2 class="education__item-title">Titulo del curso</h2>
+                        <p class="education__item-place">Plataforma o evento</p>
+                    </div>
+                    <div class="education__item">
+                        <h3 class="education__item-certifier">Nombre de origen</h3>
+                        <h2 class="education__item-title">Titulo del curso</h2>
+                        <p class="education__item-place">Plataforma o evento</p>
+                    </div>
+                    <div class="education__item">
+                        <h3 class="education__item-certifier">Nombre de origen</h3>
+                        <h2 class="education__item-title">Titulo del curso</h2>
+                        <p class="education__item-place">Plataforma o evento</p>
+                    </div>
+                    <div class="education__item">
+                        <h3 class="education__item-certifier">Nombre de origen</h3>
+                        <h2 class="education__item-title">Titulo del curso</h2>
+                        <p class="education__item-place">Plataforma o evento</p>
                     </div>
                 </div>
             </div>
             <div class="education__knowledge">
+                <h2 class="education__certification-title subtitle">Conocimientos en: </h2>
                 <!-- logos de la tecnologia -->
             </div>
          </div>
