Se termina de agregar la estrutura y estilos de la educación

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
         <!-- Educación -->
          <div class="main__education" id="education">
+            <!-- Instituciones educativas -->
             <h1 class="main__education-title">Educación</h1>
             <div class="education__titles">
                 <div class="education__title education__title--primary">
@@ -90,6 +91,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Cursos online -->
             <div class="education__certification">
                 <h2 class="education__certification-title subtitle">Certificaciones</h2>
                 <div class="education__certifications">
@@ -120,13 +122,136 @@
                     </div>
                 </div>
             </div>
+            <!-- Conocimientos -->
             <div class="education__knowledge">
-                <h2 class="education__certification-title subtitle">Conocimientos en: </h2>
-                <!-- logos de la tecnologia -->
+                <h2 class="education__knowledge-title subtitle">Conocimientos en: </h2>
+                <div class="education__knowledge-list">
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/Angular.png" alt="icono de Angular">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/React.png" alt="icono de React js">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/NodeJS.png" alt="Icono de Node">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/Java.png" alt="Icono de Java">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="Elementos/logos/JavaScript.png" alt="Icono de JavaScript">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/TypeScript.png" alt="Icono de TypeScript">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/C.png" alt="Icono de C">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/Python.png" alt="Icono de Python">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/SQL.png" alt="Icono de SQL">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/MySQL.png" alt="Icono de Mysql">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/CloudFirestore.png" alt="Icono de CloudFirestore">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/Html.png" alt="Icono de HTML">
+                    </div>
+                    <div class="education__knowledge-item">
+                        <img class="education__knowledge-imagen" src="/Elementos/logos/CSS.png" alt="Icono de CSS">
+                    </div>
+
+                </div>
             </div>
          </div>
         <!-- Experiencia -->
-         <!-- Contacto -->
+
+        <div class="education__experience">
+            <h2 class="education__knowledge-title subtitle">Experiencia: </h2>
+            <table class="education__experience-table" sumary="Caracteristicas de las diferentes experiencias laborales y educativas">
+                <thead class="education__experience-head">
+                    <tr class="education__experience-row">
+                        <th class="education__experience-title">Proyecto</th>
+                        <th class="education__experience-title">Cargo</th>
+                        <th class="education__experience-title">Fechas</th>
+                        <th class="education__experience-title">Organización</th>
+                        <th class="education__experience-title">Jefe inmediato</th>
+                    </tr>
+                </thead>
+                <tbody class="education__experience-body">
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">Gestor de electivas</td>
+                        <td class="education__experience-description">Desarrollador Frontend</td>
+                        <td class="education__experience-description">Junio 2019 - Agosto 2019</td>
+                        <td class="education__experience-description">
+                            Universidad del cauca <span class="education__experience-subdescription">Popayán, Colombia</span>
+                        </td>
+                        <td class="education__experience-description">Daniel Eduardo Paz</td>
+                    </tr>
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">Gestor documental</td>
+                        <td class="education__experience-description">Desarrollador Backend</td>
+                        <td class="education__experience-description">Agosto 2019 - Marzo 2020</td>
+                        <td class="education__experience-description">
+                            Mosquera Abogados <span class="education__experience-subdescription">Popayán, Colombia</span>
+                        </td>
+                        <td class="education__experience-description">Orlado de Jesús Mosquera</td>
+                    </tr>
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">Herramienta digital para seguimiento de gestor de acciones</td>
+                        <td class="education__experience-description">Desarrollador Backend</td>
+                        <td class="education__experience-description">Septiembre 2020 - Noviembre 2020</td>
+                        <td class="education__experience-description">
+                            Oficina de control interno de la Uni. del Cauca <span class="education__experience-subdescription">Popayán, Colombia</span>
+                        </td>
+                        <td class="education__experience-description">Daniel Eduardo Paz y Pablo Mage</td>
+                    </tr>
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">Aplicación web de simulacros de pruebas SABER PRO y T&T</td>
+                        <td class="education__experience-description">Desarrollador Frontend</td>
+                        <td class="education__experience-description">Septiembre 2020 - Diciembre 2020</td>
+                        <td class="education__experience-description">
+                            Universidad del Cauca <span class="education__experience-subdescription">Popayán, Colombia</span>
+                        </td>
+                        <td class="education__experience-description">Cesar Jesús Pardo</td>
+                    </tr>
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">
+                            Calculadora inteligente de bolo de insulina en skill Alexa para pacientes con diabetes mellitus y
+                            deficiencia visual
+                        </td>
+                        <td class="education__experience-description">Desarrollador Full Stack</td>
+                        <td class="education__experience-description">Febrero 2021 - Diciembre 2021</td>
+                        <td class="education__experience-description">
+                            Universidad Miguel Hernández de Elche 
+                            <span class="education__experience-subdescription">
+                                Elche, Comunidad Valenciana, España
+                            </span>
+                        </td>
+                        <td class="education__experience-description">Oscar Andrés Vivas y Juliana Manrique Córdoba</td>
+                    </tr>
+                    <tr class="education__experience-row">
+                        <td class="education__experience-description">
+                            Proyecto Asofondos
+                            (Asociación Colombiana de Administradoras de Fondos de Pensiones y de Cesantía)
+                        </td>
+                        <td class="education__experience-description">Ingeniero de desarrollo</td>
+                        <td class="education__experience-description">Marzo 2022 - Actualmente</td>
+                        <td class="education__experience-description">
+                            Heinsohn Business Technology <span class="education__experience-subdescription">Bogotá, Colombia</span>
+                        </td>
+                        <td class="education__experience-description">Néstor Alejandro Salgado Arias</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Contacto -->
 
     </main>
 
