Finaliza estructura correo y footer

--- a/index.html
+++ b/index.html
@@ -252,11 +252,37 @@
         </div>
 
         <!-- Contacto -->
+        <div class="main_email" id="contact">
+            <h1 class="main_email-title">Contacto</h1>
+            <div class="main_email-body">
+                <form action="" class="main_email-form">
+                    <label class="main_email-label" for="subject">Asunto: </label>
+                    <input type="text" class="main_email-subject" id="subject" name="subject" placeholder="Ingrese el asunto" required>
+
+                    <label class="main_email-label" for="message">Mensaje: </label>
+                    <textarea class="main_email-textarea" name="message" id="message" rows="10" placeholder="Escriba el mensaje" required></textarea>
+
+                    <button class="main_email-button">Enviar</button>
+
+                </form>
+            </div>
+        </div>
 
     </main>
 
     <footer class="footer">
-        By - Juan Camilo Solarte Orozco
+        <div class="footer_container">
+            <p class="footer_container-developer">Desarrollado por - Juan Camilo Solarte Orozco</p>
+            <p class="footer_container-email">juancsolarteo98@gmail.com</p>
+            <div class="footer_container-links">
+                <a class="footer_container-link" href="https://www.linkedin.com/in/juan-camilo-solarte-orozco/">
+                    <img class="footer_container-image" src="./Elementos/Iconos/linkedin.png" alt="Acceso al linkedin">
+                </a>
+                <a class="footer_container-link" href="https://github.com/juansolar/portafolio">
+                    <img class="footer_container-image" src="./Elementos/Iconos/github.png" alt="Acceso al código de la página">
+                </a>
+            </div>
+        </div>
     </footer>
 
     <!-- <script src="index.js"></script> -->
